# GEEP

./: .gitignore  CMakeLists.txt  README.md
examples/: ExampleRunner.cpp  ExampleRunner.h  LogHelper.cpp  LogHelper.h
examples/data/: Concrete Compressive Strength Data.csv  Concrete Compressive Strength Data.md  Wine Quality Red.csv
examples/programs/: 001_Symbolic_regression_find_function.cpp  002_Symbolic_regression.cpp  003_Minimal_example_for_symbolic_regression.cpp  004_Concrete_Compressive_Strength_Symbolic_regression.cpp  005_Nguyen_1_benchmark_problem.cpp  006_Wine_quality_Symbolic_regression.cpp
examples/xml/: 001_find_function_by_points.xml  002_Concrete_Compressive_Strength.xml
src/: GEEPConfig.cpp  GEEPConfig.h  main.cpp
src/criterions/: StopCriterion.cpp  StopCriterion.h  StopCriterionType.h
src/crossover/: Crossover.cpp  Crossover.h  SubtreeCrossover.cpp  SubtreeCrossover.cu  SubtreeCrossover.h
src/cuda/: CudaUtils.cu  CudaUtils.h  GPUTree.cu  GPUTree.h
src/elitism/: Elitism.cpp  Elitism.cu  Elitism.h
src/helpers/: NumberConversions.cpp  NumberConversions.h
src/mutation/: Mutation.cpp  Mutation.cu  Mutation.h
src/nodes/: FunctionFactory.h  FunctionNode.cpp  FunctionNode.h  Node.cpp  Node.h  TerminalFactory.h  TerminalNode.cpp  TerminalNode.h
src/nodes/functions/: AddOperator.cpp  AddOperator.h  DivideOperator.cpp  DivideOperator.h  MultiplyOperator.cpp  MultiplyOperator.h  SubtractOperator.cpp  SubtractOperator.h
src/nodes/terminals/: ConstNode.cpp  ConstNode.h  VariableNode.cpp  VariableNode.h
src/problems/: ObjectiveType.h  Problem.cpp  Problem.h  SymbolicRegressionProblem.cpp  SymbolicRegressionProblem.cu  SymbolicRegressionProblem.cuh  SymbolicRegressionProblem.h
src/selections/: RouletteWheelSelection.cpp  RouletteWheelSelection.h  Selection.cpp  Selection.h  SelectionMethod.h  TournamentSelection.cpp  TournamentSelection.cu  TournamentSelection.h
src/service/: GEEPService.cpp  GEEPService.h  XMLParser.cpp  XMLParser.h
src/solutions/: Solution.cpp  Solution.h
src/targets/: Target.cpp  Target.h
src/tasks/: Task.cpp  Task.h
src/tests/: SubtreeCrossoverTest.cu  SubtreeCrossoverTest.h  SymbolicRegressionGPUTest.cu  SymbolicRegressionGPUTest.h  main_test.cpp
